[package]
name = "fujicoin"
version = "0.23.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-fujicoin/rust-fujicoin/"
repository = "https://github.com/rust-fujicoin/rust-fujicoin/"
documentation = "https://docs.rs/fujicoin/"
description = "General purpose library for using and interoperating with Fujicoin and other cryptocurrencies."
keywords = [ "crypto", "fujicoin" ]
readme = "README.md"

[lib]
name = "fujicoin"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "fujicoin_hashes/fuzztarget"]
unstable = []
rand = ["secp256k1/rand-std"]
use-serde = ["hex", "serde", "fujicoin_hashes/serde", "secp256k1/serde"]

[dependencies]
bech32 = "0.7.2"
fujicoin_hashes = "0.7.3"
secp256k1 = "0.17.1"

fujicoinconsensus = { version = "0.19.0-1", optional = true }
serde = { version = "1", optional = true }
hex = { version = "=0.3.2", optional = true }

[dev-dependencies]
hex = "=0.3.2"
serde_derive = "<1.0.99"
serde_json = "1"
serde_test = "1"
secp256k1 = { version = "0.17.1", features = ["rand-std"] }
