[package]
name = "fujicoin"
version = "0.24.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-fujicoin/rust-fujicoin/"
repository = "https://github.com/rust-fujicoin/rust-fujicoin/"
documentation = "https://docs.rs/fujicoin/"
description = "General purpose library for using and interoperating with Fujicoin and other cryptocurrencies."
keywords = [ "crypto", "fujicoin" ]
readme = "README.md"

[lib]
name = "fujicoin"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "fujicoin_hashes/fuzztarget"]
unstable = []
rand = ["secp256k1/rand-std"]
use-serde = ["serde", "fujicoin_hashes/serde", "secp256k1/serde"]

[dependencies]
bech32 = "0.7.2"
fujicoin_hashes = "0.8.0"
secp256k1 = "0.18.0"

fujicoinconsensus = { version = "0.19.0-1", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
hex = "=0.3.2"
serde_derive = "<1.0.99"
serde_json = "<1.0.45"
serde_test = "1"
secp256k1 = { version = "0.18.0", features = ["rand-std"] }
# We need to pin ryu (transitive dep from serde_json) to stay compatible with Rust 1.22.0
ryu = "<1.0.5"
